fix align center and add margin to swiper title

--- a/src/sass/components/_swiper.scss
+++ b/src/sass/components/_swiper.scss
@@ -11,7 +11,7 @@
   font-weight: normal;
   text-align: center;
   color: $black-color;
-  margin: 10px 0px;
+  margin: 30px 0 10px 0;
   text-transform: uppercase;
 }
 .dark-theme .wrapper__title {
